# torchapp-cookiecutter

./: README.rst  cookiecutter.json  pyproject.toml
.github/workflows/: testing.yml
tests/: test_cookiecutter.py
{{cookiecutter.project_slug}}/: .gitlab-ci.yml  README.rst  pyproject.toml
{{cookiecutter.project_slug}}/.github/workflows/: docs.yml  publish.yml  testing.yml
{{cookiecutter.project_slug}}/docs/: cli.rst  conf.py  credits.rst  index.rst
{{cookiecutter.project_slug}}/tests/: test_apps.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: apps.py
