[tool.poetry]
name = "{{ cookiecutter.project_name }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.description }}"
authors = ["{{ cookiecutter.author_name }} <{{ cookiecutter.email }}>"]
license = "{{ cookiecutter.open_source_license }}"
readme = "README.rst"
repository = "https://github.com/{{ cookiecutter.github_user }}/{{ cookiecutter.project_slug }}/"
documentation = "https://{{ cookiecutter.github_user }}.github.io/{{ cookiecutter.project_slug }}"
homepage = "https://github.com/{{ cookiecutter.github_user }}/{{ cookiecutter.project_slug }}/"
keywords = [""torchapp", "pytorch", "deep learning", "command-line interface"]
# For classifiers see https://pypi.org/classifiers/
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
torchapp = ">=0.4.13"

[tool.poetry.group.dev.dependencies]
pytest = ">=6.2.5"
ipython = ">=8.1.1"
ipykernel = ">=6.6.1"
coverage = ">=5.5"
autopep8 = ">=1.5.7"
Sphinx = ">=5.0.0"
nbsphinx = ">=0.8.7"
sphinx-rtd-theme = ">=1.0.0"
sphinx-autobuild = ">=2021.3.14"
myst-parser = ">=0.15.2"
pre-commit = ">=2.15.0"
sphinx-copybutton = ">=0.4.0"
black = ">=21.10b0"
sphinx-click = {git = "https://github.com/rbturnbull/sphinx-click.git"}

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
{{ cookiecutter.project_slug }} = "{{ cookiecutter.project_slug }}.apps:{{ cookiecutter.app_name }}.main"
{{ cookiecutter.project_slug }}-tools = "{{ cookiecutter.project_slug }}.apps:{{ cookiecutter.app_name }}.tools"
